# calendar2pdf

./: .gitignore  Cargo.toml
data/: KHW Travel Calendar.ics  PDW Travel Calendar.ics  test.ics
src/: calendar.html  events.rs  lib.rs  main.rs  printable.rs
