[package]
name = "calendar2pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
azul-text-layout = "0.0.4"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
ical = "0.10.0"
icalendar = "0.16.0"
printpdf = "0.7.0"
